<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Helping Hand</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="log_in_to_shh__string">Log in to Helping Hand!</string>
    <string name="login_string">Login</string>
    <string name="sign_up_string">Sign up</string>
    <string name="already_have_an_account__string">Already have an account?</string>
    <string name="a_hub_where_whispers_echo_loudest_string">Hire professionals at your doorstep</string>
    <string name="shh__string">Helping Hand!</string>
    <string name="welcome_to_string">Welcome To</string>
    <string name="sign_up_to_shh__string">Sign up to Helping Hand!</string>
    <string name="create_account_string">Create Account</string>
    <string name="enter_your_name_string">Enter your name </string>
    <string name="enter_username_string">Enter username </string>
    <string name="enter_password_string">Enter password </string>
    <string name="enter_email_string">Enter  Email</string>
    <string name="or_continue_with_email_string">Or continue with Email</string>
    <string name="i_agree_with_the_terms_of_service_and_privacy_policy_string">I agree with the Terms of Service and Privacy policy</string>
    <string name="sign_up_with_google_string">Sign up with Google</string>
    <string name="username_or_email_string"> Username or Email </string>
    <string name="password_string">Password </string>
    <string name="forgot__string">Forgot?</string>
    <string name="log_in_with_google_string">Log in with Google</string>
    <string name="or_log_in_with_email_string">Or log in with Email</string>
    <string name="don_t_have_an_account__string">Dont have an account?</string>
    <string name="label_text_ek1_string">Label</string>
    <string name="input_text_ek1_string">Input</string>
    <string name="supporting_text_ek1_string">Supporting text</string>
    <string name="hello__human__string">Hello, Human!</string>
    <string name="find_best_vaccinate__treatment____string">Find best vaccinate, treatment...</string>
    <string name="_2_string">2</string>
    <string name="your_catrine_will_get_vaccination_tomorrow_at_07_00_am__string">Your Catrine will get vaccination tomorrow at 07.00 am!</string>
    <string name="see_details_string">See details</string>
    <string name="vaccine_string">Vaccine</string>
    <string name="surgery_string">Surgery</string>
    <string name="spa___treatment_string">SPA &amp; Treatment</string>
    <string name="consultation_string">Consultation</string>
    <string name="dr__stone_string">Dr. Stone </string>
    <string name="service__vaccine__surgery_string">Service: Vaccine, Surgery</string>
    <string name="_10km_string">10km</string>
    <string name="available_for_string">Available for</string>
    <string name="dr__vanessa_string">Dr. Vanessa</string>
    <string name="service__vaccine__surgery_ek1_string">Service: Vaccine, Surgery</string>
    <string name="_10km_ek1_string">10km</string>
    <string name="available_for_ek1_string">Available for</string>
    <string name="slider_image_desc">slider_image_desc</string>
    <string name="about_this_app">About This App</string>
    <string name="dev_name">Kulveer Goyat , Anjali , Pinkey , Rija</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="contact_us">Contact US</string>
    <string name="schedule_booking">Schedule Booking</string>
</resources>