<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content" >

    <ScrollView android:id="@+id/iphone_13___13_pro___2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RelativeLayout android:id="@+id/page_iphone_13___13_pro___2_ek1"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View   android:id="@+id/_bg__iphone_13___13_pro___2_ek2"
                    android:background="@drawable/_bg__iphone_13___13_pro___1_ek2_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="412dp"
                    android:layout_height="915dp" />

                <TextView android:id="@+id/sign_up_to_shh_"
                    android:fontFamily="@font/inter"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:textColor="@color/sign_up_color"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="78dp"
                    android:layout_width="369dp"
                    android:layout_height="51dp"
                    android:text="@string/sign_up_to_shh__string"
                    />

                <TextView android:id="@+id/already_have_an_account_"
                    android:fontFamily="@font/inter"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/sign_up_color"
                    android:layout_marginLeft="170dp"
                    android:layout_marginTop="660dp"
                    android:layout_width="210.5dp"
                    android:layout_height="28.5dp"
                    android:text="@string/already_have_an_account__string"
                    />

                <TextView android:id="@+id/login"
                    android:fontFamily="@font/inter"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/login_color"
                    android:layout_marginLeft="246dp"
                    android:layout_marginTop="684dp"
                    android:layout_width="61.5dp"
                    android:layout_height="28.5dp"
                    android:text="@string/login_string"
                    />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/rectangle_10"
                        android:fontFamily="@font/inter"
                        android:backgroundTint="@color/black"
                        android:layout_marginStart="168dp"
                        android:layout_marginTop="599dp"
                        android:layout_width="180dp"
                        android:layout_height="56dp"
                        android:text="@string/create_account_string"/>


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupname"
                    android:layout_width="306dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="43dp"
                    android:layout_marginTop="305dp"
                    android:background="@drawable/rectangle_6_shape"
                    android:fontFamily="@font/inter"
                    android:hint="@string/enter_your_name_string"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Signupuser"
                    android:layout_width="306dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="43dp"
                    android:layout_marginTop="373dp"
                    android:background="@drawable/rectangle_7_shape"
                    android:fontFamily="@font/inter"
                    android:hint="@string/enter_username_string"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:textSize="15sp"
                    tools:ignore="TouchTargetSizeCheck" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Signuppassword"
                    android:layout_width="306dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="43dp"
                    android:layout_marginTop="509dp"
                    android:background="@drawable/rectangle_11_shape"
                    android:fontFamily="@font/inter"
                    android:hint="@string/enter_password_string"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:textSize="15sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupemail"
                    android:layout_width="306dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="43dp"
                    android:layout_marginTop="441dp"
                    android:background="@drawable/rectangle_8_shape"
                    android:fontFamily="@font/inter"
                    android:hint="@string/enter_email_string"
                    android:inputType="textEmailAddress"
                    android:paddingStart="20dp"
                    android:textSize="15sp"
                    tools:ignore="TouchTargetSizeCheck" />


            </RelativeLayout>


                <RelativeLayout android:id="@+id/group_10"
                    android:layout_marginTop="247dp"
                    android:layout_marginStart="19dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <TextView android:id="@+id/or_continue_with_email"
                        android:fontFamily="@font/inter"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:textColor="@color/login_color"
                        android:layout_marginStart="93dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="186.5dp"
                        android:layout_height="28.5dp"
                        android:text="@string/or_continue_with_email_string"
                        />

                    <View   android:id="@+id/line_1"
                        android:background="@drawable/line_1_shape"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="9dp"
                        android:layout_width="82dp"
                        android:layout_height="1dp" />

                    <View   android:id="@+id/line_3"
                        android:background="@drawable/line_3_shape"
                        android:layout_marginStart="268dp"
                        android:layout_marginTop="9dp"
                        android:layout_width="82dp"
                        android:layout_height="1dp" />

                </RelativeLayout>

                <TextView android:id="@+id/i_agree_with_the_terms_of_service_and_privacy_policy"
                    android:fontFamily="@font/inter"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/sign_up_color"
                    android:layout_marginStart="73dp"
                    android:layout_marginTop="566dp"
                    android:layout_width="303dp"
                    android:layout_height="15dp"
                    android:text="@string/i_agree_with_the_terms_of_service_and_privacy_policy_string"
                    />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/rectangle_9"
                    android:layout_width="18sp"
                    android:layout_height="19dp"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="566dp"
                    android:background="@drawable/rectangle_9_shape"
                    tools:ignore="TouchTargetSizeCheck" />


                <RelativeLayout android:id="@+id/group_4"
                    android:layout_marginTop="165dp"
                    android:layout_marginStart="43dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/googlebtn1"
                        android:fontFamily="@font/inter"
                        android:backgroundTint="@color/black"
                        android:paddingStart="60sp"
                        android:text="@string/sign_up_with_google_string"
                        android:layout_width="306dp"
                        android:layout_height="56dp" />

                    <ImageView android:id="@+id/search_1"
                        android:src="@drawable/search_1"
                        android:contentDescription="search_1"
                        android:layout_marginStart="71dp"
                        android:layout_marginTop="18dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                </RelativeLayout>

                <ImageView
                    android:id="@+id/whoa_1"
                    android:layout_width="411dp"
                    android:layout_height="910dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="whoa_1"
                    android:src="@drawable/whoa_1" />

            </RelativeLayout>

    </ScrollView>
</HorizontalScrollView>